--- a/Game 2d Ania SplatterHouse vs/styles.css
+++ b/Game 2d Ania SplatterHouse vs/styles.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 .Myscore {
-    margin-left: 0;
+    margin-left: 34%;
     font-size: 2.5em;
 }
 
 body {
     font-family: 'Righteous', cursive;
-    background-color: black;
+    background: rgb(0, 0, 0);
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(131, 46, 46, 1) 51%, rgba(0, 0, 0, 1) 100%);
     color: rgb(241, 27, 27);
 }
 
